--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "winproc"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Sam Green <sam.green81@gmail.com>"]
 description = "Small wrapper over some process-related Windows APIs."
 readme = "README.md"
@@ -13,4 +13,5 @@ gitlab = { repository = "samgreen/winproc-rs" }
 
 [dependencies]
 failure = "0.1.1"
-winapi = { version = "0.3", features = ["handleapi", "tlhelp32", "realtimeapiset", "winbase"] }
+winapi = { version = "0.3", features = ["handleapi", "tlhelp32", "realtimeapiset", "winbase", "psapi"] }
+bitflags = "1.0"
