--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "winproc"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Sam Green <sam.green81@gmail.com>"]
 description = "Small wrapper over some process-related Windows APIs."
 readme = "README.md"
@@ -15,3 +15,4 @@ gitlab = { repository = "samgreen/winproc-rs" }
 failure = "0.1.1"
 winapi = { version = "0.3", features = ["handleapi", "tlhelp32", "realtimeapiset", "winbase", "psapi"] }
 bitflags = "1.0"
+widestring = "0.3"
